# artemis-changelog

./: .gitignore  .gitlab-ci.yml  .pre-commit-config.yaml  .pyre_configuration.license  Gemfile  Jenkinsfile  Makefile  README.adoc  REUSE.toml  poetry.lock.license  pyproject.toml  renovate.json.license  update.sh
.github/: renovate.json
.github/workflows/: lint.yml  pages.yml
.reuse/: dep5
artemis_changelog/: main.py
artemis_changelog/templates/: index.adoc.jinja2  release_notes.adoc.jinja2
changelog/: index.adoc
changelog/01/01/: 01.adoc  02.adoc  03.adoc  04.adoc  05.adoc  06.adoc  07.adoc  08.adoc  09.adoc
changelog/01/02/: 00.adoc  01.adoc  02.adoc
changelog/01/03/: 02.adoc
changelog/01/04/: 01.adoc  02.adoc  03.adoc
changelog/02/00/: 01.adoc
changelog/02/03/: 01.adoc  03.adoc
changelog/02/04/: 00.adoc
changelog/02/05/: 00.adoc
changelog/02/06/: 00.adoc
changelog/02/07/: 00.adoc
changelog/02/08/: 00.adoc  01.adoc
changelog/02/09/: 00.adoc
changelog/03/00/: 00.adoc  01.adoc  02.adoc  03.adoc
changelog/03/01/: 00.adoc  01.adoc  02.adoc  03.adoc  04.adoc  05.adoc  06.adoc  07.adoc
changelog/03/02/: 00.adoc  01.adoc  02.adoc  03.adoc
changelog/03/03/: 00.adoc  01.adoc  02.adoc
changelog/03/04/: 00.adoc  01.adoc
changelog/03/05/: 00.adoc
changelog/03/06/: 00.adoc
changelog/03/07/: 00.adoc  01.adoc  02.adoc
changelog/03/08/: 00.adoc  01.adoc  02.adoc  03.adoc  04.adoc  05.adoc  06.adoc  07.adoc  08.adoc  09.adoc
changelog/03/09/: 00.adoc  01.adoc  02.adoc  03.adoc  04.adoc  05.adoc  06.adoc  07.adoc
changelog/03/10/: 00.adoc  01.adoc  02.adoc  03.adoc
changelog/03/11/: 00.adoc  01.adoc  02.adoc  03.adoc
changelog/04/00/: 00.adoc  01.adoc  02.adoc  03.adoc  04.adoc  05.adoc  06.adoc
changelog/04/01/: 00.adoc  01.adoc  02.adoc  03.adoc
changelog/04/02/: 00.adoc  01.adoc  02.adoc  03.adoc  04.adoc  05.adoc  06.adoc  07.adoc  08.adoc  09.adoc  10.adoc  11.adoc  12.adoc
changelog/04/03/: 00.adoc  01.adoc  02.adoc  03.adoc  04.adoc  05.adoc  06.adoc  07.adoc  08.adoc  09.adoc  10.adoc
changelog/04/04/: 00.adoc  01.adoc  02.adoc  03.adoc  04.adoc  05.adoc  06.adoc
changelog/04/05/: 00.adoc  01.adoc  02.adoc
changelog/04/06/: 00.adoc  01.adoc  02.adoc  03.adoc  04.adoc
changelog/04/07/: 00.adoc  01.adoc  02.adoc  03.adoc  04.adoc  05.adoc  06.adoc  07.adoc
changelog/04/08/: 00.adoc  01.adoc  02.adoc  03.adoc  04.adoc  05.adoc  06.adoc
changelog/04/09/: 00.adoc  01.adoc  02.adoc  03.adoc  04.adoc  05.adoc  06.adoc
changelog/04/10/: 00.adoc  01.adoc  02.adoc  03.adoc  04.adoc  05.adoc  06.adoc
changelog/04/11/: 00.adoc  01.adoc  02.adoc  03.adoc  04.adoc  05.adoc  06.adoc  07.adoc  08.adoc  09.adoc
changelog/04/12/: 00.adoc  01.adoc  02.adoc  03.adoc  04.adoc  05.adoc  06.adoc  07.adoc  08.adoc  09.adoc
changelog/05/00/: 00.adoc  01.adoc  02.adoc  03.adoc  04.adoc  05.adoc  06.adoc  07.adoc  08.adoc  09.adoc
changelog/05/01/: 00.adoc  01.adoc  02.adoc  03.adoc  04.adoc  05.adoc  06.adoc
changelog/05/02/: 00.adoc  01.adoc  02.adoc  03.adoc  04.adoc  05.adoc  06.adoc  07.adoc
changelog/05/03/: 00.adoc  01.adoc  02.adoc  03.adoc  04.adoc  05.adoc
changelog/05/04/: 00.adoc  01.adoc  02.adoc  03.adoc  04.adoc
changelog/05/05/: 00.adoc  01.adoc  02.adoc  03.adoc  04.adoc  05.adoc  06.adoc  07.adoc
changelog/05/06/: 00.adoc  01.adoc
changelog/05/07/: 00.adoc  01.adoc  02.adoc  03.adoc  04.adoc  05.adoc
changelog/05/08/: 00.adoc  01.adoc  02.adoc  03.adoc  04.adoc  05.adoc  06.adoc  07.adoc
changelog/05/09/: 00.adoc  01.adoc  02.adoc  03.adoc  04.adoc  05.adoc  06.adoc  07.adoc  08.adoc
changelog/05/10/: 00.adoc  01.adoc  02.adoc
changelog/05/11/: 00.adoc  01.adoc  02.adoc  03.adoc  04.adoc
changelog/05/12/: 00.adoc  01.adoc  02.adoc  03.adoc  04.adoc  (+5 more)
src/artemis_changelog/: main.py
(+141 files in other folders)
