# SPDX-FileCopyrightText: 2024 Artemis Changelog Contributors
#
# SPDX-License-Identifier: EUPL-1.2

[project]
name = "artemis-changelog"
version = "0.1.0"
description = ""
requires-python = ">=3.12"
authors = [
    { name = "Benedikt Fein", email = "fein@fim.uni-passau.de" }
]
classifiers = [
    "License :: OSI Approved :: European Union Public Licence 1.2 (EUPL 1.2)",
]
dependencies = [
    "gitpython>=3.1.43",
    "jinja2>=3.1.5",
    "more-itertools>=10.5.0",
    "semver>=3.0.2",
]

[dependency-groups]
dev = [
    "isort>=6.0.0",
    "mypy>=1.14.1",
    "pre-commit>=4.0.1",
    "pyre-check>=0.9.23",
    # newer version incompatible with pyre
    # rel: https://github.com/facebook/pyre-check/issues/988
    "click<8.3.2",
    "pyupgrade>=3.19.1",
    "reuse>=5.0.2",
    "ruff>=0.11.0",
]


[tool.isort]
profile = "black"


[tool.mypy]
[[tool.mypy.overrides]]
module = "semver"
ignore_missing_imports = true


[tool.ruff]
line-length = 88
target-version = "py312"
output-format = "full"


[tool.ruff.lint]
select = ["ALL"]
ignore = [
    "D",
    "E501", # line length managed by formatter
    "ISC001", # conflict with formatter
    "COM812" # trailing comma managed by formatter
]
exclude = [
    "docs",
    ".venv",
    "venv",
    ".mypy_cache",
    ".pytest_cache",
]


[tool.ruff.lint.mccabe]
max-complexity = 10


[build-system]
requires = ["setuptools >= 61.0"]
build-backend = "setuptools.build_meta"
