# SPDX-FileCopyrightText: 2024-2026 Artemis Changelog Contributors
#
# SPDX-License-Identifier: EUPL-1.2

[project]
name = "artemis-changelog"
version = "0.1.1"
description = ""
requires-python = ">=3.13"
authors = [
    { name = "Benedikt Fein", email = "fein@fim.uni-passau.de" }
]
license = "EUPL-1.2"
dependencies = [
    "gitpython>=3.1.43",
    "jinja2>=3.1.5",
    "more-itertools>=10.5.0",
    "semver>=3.0.2",
]

[dependency-groups]
dev = [
    "mypy>=2.0.0",
    "pre-commit>=4.0.1",
    "pyupgrade>=3.19.1",
    "reuse>=5.0.2",
    "ruff>=0.15.0",
]


[tool.mypy]
[[tool.mypy.overrides]]
module = "semver"
ignore_missing_imports = true


[tool.ruff]
line-length = 88
target-version = "py313"
output-format = "full"


[tool.ruff.lint]
select = ["ALL"]
ignore = [
    "D",
    "COM812" # trailing comma managed by formatter
]
exclude = [
    "docs",
    ".venv",
    "venv",
    ".mypy_cache",
    ".pytest_cache",
]


[tool.ruff.lint.mccabe]
max-complexity = 10


[build-system]
requires = ["uv_build>=0.11.14,<0.12"]
build-backend = "uv_build"
